--- a/package.json
+++ b/package.json
@@ -6,21 +6,21 @@
     "start": "node ./bin/www"
   },
   "engines": {
-    "node": "~9.6.1",
-    "npm": "~5.6.0"
+    "node": "9.11.2",
+    "npm": "5.6.0"
   },
   "dependencies": {
-    "body-parser": "~1.18.2",
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.6.9",
-    "express": "~4.15.5",
-    "history": "^4.7.2",
-    "jade": "~1.11.0",
-    "mongodb": "^2.2.33",
-    "mongoose": "^4.12.4",
-    "morgan": "~1.9.0",
-    "request": "^2.83.0",
-    "serve-favicon": "~2.4.5"
+    "body-parser": "1.18.2",
+    "cookie-parser": "1.4.3",
+    "debug": "2.6.9",
+    "express": "4.16.0",
+    "history": "4.7.2",
+    "jade": "1.11.0",
+    "mongodb": "2.2.33",
+    "mongoose": "4.12.4",
+    "morgan": "1.9.0",
+    "request": "2.83.0",
+    "serve-favicon": "2.4.5"
   },
   "devDependencies": {}
 }
