Implement 'Alawl' cases

--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "cookie-parser": "1.4.3",
     "debug": "2.6.9",
     "express": "4.16.0",
+    "fraction": "^0.2.0",
     "history": "4.7.2",
     "jade": "1.11.0",
+    "mathjs": "^5.9.0",
     "mongodb": "2.2.33",
     "mongoose": "4.12.4",
     "morgan": "1.9.0",
